--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+/****** Main Styling ******/
+
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
@@ -16,6 +18,10 @@ h3 {
   margin-top: 30px;
 }
 
+hr {
+	margin: 25px;
+}
+
 .footer {
 	margin-top: 40px;
 }
@@ -25,6 +31,14 @@ code {
   padding: 2px;
   color: black;
   background-color: #fff;
+}
+
+ul {
+	list-style-type: none;
+}
+
+li {
+  margin-bottom: 0.5em;
 }
 
 a {
